# HuffmanEncoder

./: .gitignore  CMakeLists.txt  Huffman.sln
Huffman/: BitCollector.cpp  BitCollector.h  FileDetailDlg.cpp  Huffman.rc  Huffman.vcxproj  Huffman.vcxproj.filters  HuffmanDlg.cpp  HuffmanDlg.h  HuffmanEncoder.cpp  HuffmanEncoder.h  MultilineList.cpp  MultilineList.h  ProcessDlg.cpp  ProcessDlg.h  Queue.h  Sha256.h  Utils.cpp  Utils.h  resource.h
Huffman/res/: Huffman.rc2
UnitTest/: UnitTest.vcxproj  test.cpp
src/: BitCollector.h  FileDetailDlg.h  Huffman.cpp  Huffman.h  Huffman.rc  HuffmanDlg.h  ProcessDlg.cpp  ProcessUnit.h  Queue.h  resource.h
test/: test.cpp
